[package]
name = "drum-circle-server"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tokio-tungstenite = "0.26.2"
uuid = { version = "1.16.0", features = ["v4"] }
